--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,6 @@
 name: Upload Python Package
 
-on:
-  release:
-    types: [created]
+on: [push]
 
 jobs:
   deploy:
@@ -16,7 +14,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine
+        pip install "setuptools>=42" 
+        pip install wheel 
+        pip install twine
     - name: Build and publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
